# communications_internship

./: .gitignore  README.md
Network Communications Simulation/: BaseStation.m  CCDF.m  CCDF_with_NLOS_connect.fig  SINR.m  SimulationData.m  bestCandidates.m  compare.fig  compareGraphs.m  compareLarge.fig  compareNLOSConnection.fig  coverageMap.fig  coverageMapRedGreen.fig  coverageProbability.m  coverageWithNLOSPathLoss.fig  diffractionDistance.m  diffractionPower.m  dispPoints.m  dispRoads.m  displayFitness.m  figure3.fig  figure3.m  fitnessValue.m  getDistance.m  graphNLOS.m  manhattan.m  nearestBaseStation.m  nearestLOS.m  numRoadsCrossed.m  optimizationDiagram.m  optimizePlacement.m  optimizedMapCCDF.fig  plotGraph.m  (+4 more)
Network Communications Simulation (Rust)/: Cargo.toml  README.md
Network Communications Simulation (Rust)/output/: ccdf.csv  ccdf_100_per_km2_los.csv  ccdf_100_per_km2_nlos.csv  ccdf_20_per_km2.csv  ccdf_20_per_km2_los.csv  ccdf_20_per_km2_nlos.csv  ccdf_42_1.5.csv  ccdf_42_15.csv  ccdf_42_150.csv  ccdf_42_1500.csv  ccdf_42_20_per_km2.csv  ccdf_from_optimized_nlos_13_per_km2.csv  ccdf_from_optimized_nlos_20_per_km2.csv  ccdf_nlos_100_per_km2.csv  ccdf_nlos_20_per_km2.csv  density_vs_coverage.csv  density_vs_coverage_los.csv  density_vs_coverage_nlos.csv  density_vs_coverage_true.csv  density_vs_sinr.csv  density_vs_sinr_100000.csv  optimized_deployment.json
Network Communications Simulation (Rust)/src/: geom.rs  lib.rs  metrics.rs  opt.rs  optimization.rs  rf.rs  sim.rs  visualization.rs
Network Communications Simulation (Rust)/tests/: basic.rs
(+17 files in other folders)
